--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 # And not the projects directory...
 !projects/
 !projects/**
+
+# But ignore combined lua file
+projects/tomb_raider_editor_v2/combined_lua.lua
